MAT-1827 changed object-fit from cover to contain preventing img cropping

--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -172,5 +172,5 @@
 .imageSize {
   width: 100px;
   height: 100px;
-  object-fit: cover;
+  object-fit: contain;
 }
